--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Plataforma para gestionar tus facturas." />
+    <meta name="description" content="Aplicacion web para gestiones pagos y facturas de los usuarios." />
     <title>Bills</title>
   </head>
   <body>
