--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo/favicon.png" />
+    <base href="/" />
+    <meta property="og:title" content="Facturas y/o cobros." />
+    <meta property="og:description" content="Recuerdas y organiza tus facturas de cobro." />
+    <!-- <meta property="og:image" content="" /> -->
+    <meta property="og:url" content="https://aesthetic-kleicha-9bf9d8.netlify.app" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="Aplicacion web para gestiones pagos y facturas de los usuarios." />
-    <base href="/">
+    <meta name="description" content="Aplicacion web para gestiones pagos y facturas de los usuarios."/>
     <title>Bills</title>
   </head>
   <body>
